--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <p class="pt-1 pl-2">Temperature: <span id="temperature"></span> &deg;F</p>
                         <p class="pl-2">Humidity: <span id="humidity"></span>% </p>
                         <p class="pl-2">Wind Speed: <span id="wind"></span> MPH</p>
-                        <p class="pl-2">UV Index: <span id="uv-index" class="p-1"></span></p>
+                        <p class="pl-2">UV Index: <span id="uv-index"></span></p>
                     </div>
 
                     <!-- 5 Day forecast -->
@@ -51,10 +51,12 @@
                                         <p class="card-title">Day 1</p>
                                         <img class="fiveDay-img mb-2" />
                                         <p class="card-subtitle mb-2 text-muted">Temp: <span
-                                        class="fiveDay-temp"></span>
+                                        class="fiveDay-temp" id="day1temp"></span>
                                         &deg;F</p>
                                         <p class="card-subtitle mb-2 text-muted">Humidity: <span
-                                        class="fiveDay-humid"></span>%</p>
+                                        class="fiveDay-humid" id="day1humid"></span>%</p>
+                                        <p class="card-subtitle mb-2 text-muted">Wind-speed: <span
+                                            class="fiveDay-humid" id="day1speed"></span>  MPH</p>
                                     </div>
                                 </div>
                             </div>
@@ -65,10 +67,12 @@
                                         <p class="card-title">Day 2</p>
                                         <img class="fiveDay-img mb-2" />
                                         <p class="card-subtitle mb-2 text-muted">Temp: <span
-                                        class="fiveDay-temp"></span>
+                                        class="fiveDay-temp" id="day2temp"></span>
                                         &deg;F</p>
                                         <p class="card-subtitle mb-2 text-muted">Humidity: <span
-                                        class="fiveDay-humid"></span>%</p>
+                                        class="fiveDay-humid" id="day2humid"></span>%</p>
+                                        <p class="card-subtitle mb-2 text-muted">Wind-speed: <span
+                                            class="fiveDay-humid" id="day2speed"></span>  MPH</p>
                                     </div>
                                 </div>
                             </div>
@@ -79,10 +83,12 @@
                                         <p class="card-title">Day 3</p>
                                         <img class="fiveDay-img mb-2" />
                                         <p class="card-subtitle mb-2 text-muted">Temp: <span
-                                        class="fiveDay-temp"></span>
+                                        class="fiveDay-temp" id="day3temp"></span>
                                         &deg;F</p>
                                         <p class="card-subtitle mb-2 text-muted">Humidity: <span
-                                        class="fiveDay-humid"></span>%</p>
+                                        class="fiveDay-humid" id="day3humid"></span>%</p>
+                                        <p class="card-subtitle mb-2 text-muted">Wind-speed: <span
+                                            class="fiveDay-humid" id="day3speed"></span>  MPH</p>
                                     </div>
                                 </div>
                             </div>
@@ -93,10 +99,12 @@
                                         <p class="card-title">Day 4</p>
                                         <img class="fiveDay-img mb-2" />
                                         <p class="card-subtitle mb-2 text-muted">Temp: <span
-                                        class="fiveDay-temp"></span>
+                                        class="fiveDay-temp" id="day4temp"></span>
                                         &deg;F</p>
                                         <p class="card-subtitle mb-2 text-muted">Humidity: <span
-                                        class="fiveDay-humid"></span>%</p>
+                                        class="fiveDay-humid" id="day4humid"></span>%</p>
+                                        <p class="card-subtitle mb-2 text-muted">Wind-speed: <span
+                                            class="fiveDay-humid" id="day4speed"></span>  MPH</p>
                                     </div>
                                 </div>
                             </div>
@@ -108,9 +116,11 @@
                                         <p class="card-title">Day 5</p>
                                         <img class="fiveDay-img mb-2" />
                                         <p class="card-subtitle mb-2 text-muted">
-                                        Temp: <span class="fiveDay-temp"></span> &deg;F</p>
+                                        Temp: <span class="fiveDay-temp" id="day5temp"></span> &deg;F</p>
                                         <p class="card-subtitle mb-2 text-muted">Humidity: <span
-                                        class="fiveDay-humid"></span>%</p>
+                                        class="fiveDay-humid" id="day5humid"></span>%</p>
+                                        <p class="card-subtitle mb-2 text-muted">Wind-speed: <span
+                                            class="fiveDay-humid" id="day5speed"></span>  MPH</p>
                                     </div>
                                 </div>
                             </div>
@@ -150,8 +160,9 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!-- Moment -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
     <script src="./assets/javascript/script.js"></script>
     
 </body>
